# quickjs-kt

./: .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: benchmark.yaml  build-jvm.yaml  build.yaml  publish.yaml
benchmark/: README.md  build.gradle.kts
benchmark/src/jvmMain/kotlin/com/dokar/quickjs/benchmark/: DefineBindingsBenchmark.kt  InvokeBindingsBenchmark.kt
benchmark/src/nativeMain/kotlin/com/dokar/quickjs/benchmark/: DefineBindingsBenchmark.kt  InvokeBindingsBenchmark.kt
buildSrc/src/main/kotlin/com/dokar/quickjs/: Platform.kt  applyQuickJsNativeBuildTasks.kt  buildQuickJsNativeLibrary.kt  disableUnsupportedPlatformTasks.kt
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
integration-test/: build.gradle.kts
integration-test/src/commonMain/kotlin/com/dokar/quickjs/integration/: QuickJsIntegrationScenario.kt
integration-test/src/commonTest/kotlin/: QuickJsIntegrationTest.kt
integration-test/src/jvmMain/kotlin/com/dokar/quickjs/integration/: Main.kt
quickjs/: .gitignore  build.gradle.kts  consumer-rules.pro  gradle.properties
quickjs-converter-ktxserialization/: build.gradle.kts  gradle.properties
quickjs-converter-ktxserialization/src/commonMain/kotlin/com/dokar/quickjs/conveter/: SerializableConverter.kt
quickjs-converter-moshi/: build.gradle.kts  gradle.properties
quickjs-converter-moshi/src/commonMain/kotlin/com/dokar/quickjs/conveter/: JsonClassConverter.kt
quickjs/native/: CMakeLists.txt
quickjs/native/cmake/: zig-toolchain-ios_aarch64.cmake  zig-toolchain-ios_aarch64_simulator.cmake  zig-toolchain-ios_x64.cmake  zig-toolchain-linux_aarch64.cmake  zig-toolchain-linux_x64.cmake  zig-toolchain-macos_aarch64.cmake  zig-toolchain-macos_x64.cmake  zig-toolchain-windows_x64.cmake
quickjs/native/common/: quickjs_interrupt.c  quickjs_interrupt.h  quickjs_version.c  quickjs_version.h  stack_chk.c
quickjs/native/cvector/: cvector.h  cvector_utils.h
quickjs/native/jni/: binding_bridge.c  binding_bridge.h  exception_util.c  exception_util.h  jni_globals.c  jni_globals.h  jni_globals_generated.c  jni_globals_generated.h  js_value_util.c  js_value_util.h  log_util.h  promise_rejection_handler.c  promise_rejection_handler.h  quickjs_jni.c  quickjs_jni.h
quickjs/native/jni/mapping/: jni_types_util.c  jni_types_util.h  jobject_to_js_value.c  jobject_to_js_value.h  js_value_to_jobject.c  js_value_to_jobject.h  js_value_util.h
quickjs/scripts/: bun.lockb  generateJniGlobalsCFiles.mjs  setupMultiplatformJdks.ts
quickjs/src/androidMain/kotlin/com/dokar/quickjs/: NativeLibraryLoader.android.kt  Platform.android.kt
quickjs/src/commonMain/kotlin/com/dokar/quickjs/: ExperimentalQuickJsApi.kt  MemoryUsage.kt  QuickJs.kt  QuickJsException.kt
quickjs/src/commonMain/kotlin/com/dokar/quickjs/alias/: dslAlias.kt
quickjs/src/commonMain/kotlin/com/dokar/quickjs/binding/: Bindings.dsl.kt  Bindings.dsl.typed.kt  Bindings.dsl.typedArg.kt  Bindings.kt  DslObjectBinding.kt  JsFunction.kt  JsObject.kt  JsObjectHandle.kt  JsProperty.kt  ModuleReturns.kt
quickjs/src/commonMain/kotlin/com/dokar/quickjs/converter/: JsObjectConverter.kt  TypeConverter.kt  TypeConverters.kt  builtinTypes.kt  castValueOr.kt
quickjs/src/commonMain/kotlin/com/dokar/quickjs/internal/: BindingCallbackContext.kt
quickjs/src/commonMain/kotlin/com/dokar/quickjs/util/: Mutex.ext.kt
quickjs/src/commonTest/kotlin/com/dokar/quickjs/test/: AsyncErrorHandlingTest.kt  AsyncFunctionsTest.kt  BindingTest.kt  CloseWhileEvaluatingTest.kt  CompileTest.kt  ConcurrentDefineBindingStressTest.kt  CustomTypeConverterTest.kt  DslAliasTest.kt  EvalErrorsTest.kt  EvaluationInterruptTest.kt  FlowToAsyncIteratorTest.kt  JsPromiseTest.kt  LifetimeRegressionTest.kt  ModulesTest.kt  MultiRuntimeTest.kt  MultiThreadShareRuntime.kt  MultiThreadStackOverflowTest.kt  PromiseCatchTest.kt  QuickJsPropertiesTest.kt  TypeMappingDefineTest.kt  TypeMappingTest.ByteArray.kt  TypeMappingTest.kt  ValueCastingTest.kt
quickjs/src/jniMain/: CMakeLists.txt  README.md
quickjs/src/jniMain/cmake/: zig-toolchain-macos_aarch64.cmake
quickjs/src/jniMain/kotlin/com/dokar/quickjs/: NativeLibraryLoader.kt  Platform.kt  QuickJs.jni.kt  autoCasting.kt  typeConvert.kt
quickjs/src/jniMain/kotlin/com/dokar/quickjs/alias/: dslAlias.jni.kt
quickjs/src/jniMain/kotlin/com/dokar/quickjs/binding/: Bindings.reflect.kt  JsObjectHandle.jni.kt
quickjs/src/jniMain/kotlin/com/dokar/quickjs/converter/: castValueOr.jvm.kt
quickjs/src/jniMain/kotlin/com/dokar/quickjs/internal/: BindingCallbackContext.jni.kt
quickjs/src/jniTest/kotlin/com/dokar/quickjs/: EvaluationCleanupJvmTest.kt  GraalVmReachabilityMetadataTest.kt  JniLifetimeRegressionTest.kt  NativeLibraryLoaderJvmTest.kt
quickjs/src/jvmMain/: .gitignore  README.md
quickjs/src/jvmMain/kotlin/com/dokar/quickjs/: NativeLibraryLoader.jvm.kt  Platform.jvm.kt
quickjs/src/nativeInterop/cinterop/: quickjs.def
quickjs/src/nativeMain/kotlin/com/dokar/quickjs/: QuickJs.native.kt  autoCasting.kt  typeConvert.kt
quickjs/src/nativeTest/kotlin/com/dokar/quickjs/: NativeLifetimeRegressionTest.kt
samples/js-eval/: build.gradle.kts
samples/js-eval-android/: build.gradle.kts
samples/js-eval/src/androidMain/: AndroidManifest.xml
samples/js-eval/src/androidMain/res/values/: strings.xml
samples/js-eval/src/commonMain/composeResources/drawable/: ic_keyboard_arrow_down.xml
samples/openai/: .gitignore  build.gradle.kts
samples/openai-android/: build.gradle.kts
samples/openai/src/androidMain/: AndroidManifest.xml
samples/openai/src/androidMain/res/values/: strings.xml
samples/openai/src/commonMain/composeResources/drawable/: ic_play_arrow.xml
samples/openai/src/commonMain/composeResources/files/: openai.js  web-fetch.js
samples/repl/: build.gradle.kts
samples/repl/src/jvmMain/kotlin/: ReplMain.kt
samples/repl/src/nativeMain/kotlin/: ReplMain.kt
scripts/: bun.lockb  createBenchmarkResult.ts  generateJniGlobalsCFiles.mjs  package.json  setupMultiplatformJdks.ts
(+46 files in other folders)
